<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".ui.tutorial.TutorialFragment">

<!--    <androidx.constraintlayout.widget.ConstraintLayout-->
        <Button
        android:id="@+id/closeButton"
        android:layout_width="316dp"
        android:layout_height="296dp"
        android:layout_margin="20dp"
        android:background="@drawable/pop_up"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


        <Button
            android:id="@+id/continueButton"
            android:layout_width="113dp"
            android:layout_height="48dp"
            android:background="@drawable/button_bg"
            android:fontFamily="@font/roboto_condensed_bold"
            android:letterSpacing="0"
            android:text="@string/close"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.864" />

        <Button
            android:id="@+id/classicButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:fontFamily="@font/comfortaa"
            android:text="@string/classic"
            android:textAllCaps="false"
            app:layout_constraintBottom_toTopOf="@+id/continueButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/explanationTitle"
            app:layout_constraintVertical_bias="0.16" />

        <Button
            android:id="@+id/challengeButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/comfortaa"
            android:text="@string/challenge"
            android:textAllCaps="false"
            app:layout_constraintBottom_toTopOf="@+id/continueButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/classicButton1" />

        <TextView
            android:id="@+id/explanationTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comfortaa"
            android:text="@string/howToPlay"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="32sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.506"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.143" />

<!--    </androidx.constraintlayout.widget.ConstraintLayout>-->


</androidx.constraintlayout.widget.ConstraintLayout>